--- a/lab_3/GoRailClone.html
+++ b/lab_3/GoRailClone.html
@@ -3,30 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Go Rail HTML</title>
+    <title>HTML for Beginners</title>
+    <link rel="stylesheet" href="clone.css">
 </head>
 <body>
-    <div>
-        <h1>HTML for Beginners</h1>
-        <p>
-            Dive into the fundamentals of web development with our beginner-
-            friendly HTML course. Learn the essentials of HTML, the language
-            behind every webpage, and gain practical experience creating your
-            own web content. Perfect for absolute beginners, this course will
-            equip you with the skills to start building your first websites 
-            and set you on the path to becoming a web developer.
-        </p>
-        <br>
-        <button>&#9654;&nbsp; Start Series</button>
-        <br>
-        <p>11 Lessons | 2h 5m | Beginner</p>
-    </div>
+    <header>
+        <div class="header-content">
+            <h1>HTML for Beginners</h1>
+            <p>Dive into the fundamentals of web development with our beginner-friendly HTML course. Learn the essentials of HTML, the language behind every webpage, and gain practical experience creating your own web content. Perfect for absolute beginners, this course will equip you with the skills to start building your first websites and set you on the path to becoming a web developer.</p>
+            <button class="start-button">▶ Start Series</button>
+        </div>
+        <div class="video-preview">
+            <img src="img2.png" alt="Video Preview">
+            <span class="play-button">▶</span>
+        </div>
+    </header>
 
-    <div>
-        <img align = "left" src="thumbnail.img" alt="HTML Image">
-    </div>
+    <main>
+        <section class="lesson-list">
+            <article class="lesson">
+                <img src="img1.png" alt="Lesson Preview">
+                <div class="lesson-info">
+                    <h2>What is HTML and Why Learn It</h2>
+                    <p>In this lesson, we will learn what HTML is and why we need to know about it.</p>
+                    <span class="lesson-time">🕒 5m</span>
+                </div>
+            </article>
 
-    
+            <article class="lesson">
+                <img src="img2.png" alt="Lesson Preview">
+                <div class="lesson-info">
+                    <h2>HTML Document Structure</h2>
+                    <p>Learn about the basic structure of HTML documents.</p>
+                    <span class="lesson-time">🕒 10m</span>
+                </div>
+            </article>
 
+            <article class="lesson">
+                <img src="img3.png" alt="Lesson Preview">
+                <div class="lesson-info">
+                    <h2>Text Elements</h2>
+                    <p>Explore the elements used to markup text content in HTML.</p>
+                    <span class="lesson-time">🕒 13m</span>
+                </div>
+            </article>
+
+            <article class="lesson">
+                <img src="img4.png" alt="Lesson Preview">
+                <div class="lesson-info">
+                    <h2>Anchor Elements</h2>
+                    <p>Understand the key elements that create hyperlinks on the web.</p>
+                    <span class="lesson-time">🕒 7m</span>
+                </div>
+            </article>
+
+            <article class="lesson">
+                <img src="img5.png" alt="Lesson Preview">
+                <div class="lesson-info">
+                    <h2>List and Nav Elements</h2>
+                    <p>Learn how to display content in lists and use navigation elements.</p>
+                    <span class="lesson-time">🕒 13m</span>
+                </div>
+            </article>
+
+            <article class="lesson">
+                <img src="img6.png" alt="Lesson Preview">
+                <div class="lesson-info">
+                    <h2>Image Element</h2>
+                    <p>Learn how to display images on webpages.</p>
+                    <span class="lesson-time">🕒 14m</span>
+                </div>
+            </article>
+        </section>
+    </main>
 </body>
 </html>
